Avoid deprecated thread identifier methods